vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_loop_headers.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_loop_headers.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '' == fn () string {
      |     ~~~~~~~~~~~~~~~~~~~~
    3 |         for $embed_file(@FILE).len > 0 {
    4 |             return 'x'
