vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_loop_headers.vv
fn main() {
	'' == fn () string {
		for $embed_file(@FILE).len > 0 {
			return 'x'
		}
		return ''
	}()
}
